KFSNWU-43 Upgrade KMM to Rice 2.0 * Cleanup default properties * Introduce build time filters

--- a/config/pom.xml
+++ b/config/pom.xml
@@ -34,6 +34,9 @@
 				</includes>
 			</resource>
 		</resources>
+		<filters>
+			<filter>${filter.directory}/${build.environment.setting}.properties</filter>
+		</filters>
 	</build>
 
 	<profiles>
