--- a/web/pom.xml
+++ b/web/pom.xml
@@ -12,9 +12,6 @@
 	<name>KFS Store Management - Web</name>
 	<properties>
 		<!--DEPENDENCIES-->
-
-
-		<kmm.home.dir.setting>target/kuali/kmm</kmm.home.dir.setting>
 	</properties>
 	<dependencies>
 		<!--MODULE DEPENDENCIES-->
@@ -120,45 +117,11 @@
 				</includes>
 			</resource>
 		</resources>
+		<filters>
+			<filter>${filter.directory}/${build.environment.setting}.properties</filter>
+		</filters>
 
 		<plugins>
-
-			<!--<plugin>-->
-			<!--<groupId>org.codehaus.mojo</groupId>-->
-			<!--<artifactId>build-helper-maven-plugin</artifactId>-->
-			<!--<executions>-->
-			<!--<execution>-->
-			<!--<id>add-source</id>-->
-			<!--<phase>generate-sources</phase>-->
-			<!--<goals>-->
-			<!--<goal>add-source</goal>-->
-			<!--</goals>-->
-			<!--<configuration>-->
-			<!--<sources>-->
-			<!--<source>${basedir}/../../src/java</source>-->
-			<!--</sources>-->
-			<!--</configuration>-->
-			<!--</execution>-->
-
-			<!--<execution>-->
-			<!--<id>add-resource</id>-->
-			<!--<phase>generate-resources</phase>-->
-			<!--<goals>-->
-			<!--<goal>add-resource</goal>-->
-			<!--</goals>-->
-			<!--<configuration>-->
-			<!--<resources>-->
-			<!--<resource>-->
-			<!--<directory>${basedir}/../../src/conf/project</directory>-->
-			<!--<targetPath></targetPath>-->
-			<!--</resource>-->
-			<!--</resources>-->
-			<!--</configuration>-->
-			<!--</execution>-->
-			<!--</executions>-->
-			<!--</plugin>-->
-
-
 			<plugin>
 				<groupId>org.mortbay.jetty</groupId>
 				<artifactId>jetty-maven-plugin</artifactId>
@@ -248,27 +211,6 @@
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-dependency-plugin</artifactId>
 						<executions>
-							<!--<execution>-->
-							<!--<id>unpack-datadictionary-web-classes</id>-->
-							<!--<phase>generate-sources</phase>-->
-							<!--<goals>-->
-							<!--<goal>unpack</goal>-->
-							<!--</goals>-->
-							<!--<configuration>-->
-							<!--<artifactItems>-->
-							<!--<artifactItem>-->
-							<!--<groupId>org.kuali.kfs</groupId>-->
-							<!--<artifactId>kfs-prototype-core</artifactId>-->
-							<!--<type>jar</type>-->
-							<!--<overWrite>false</overWrite>-->
-							<!--<outputDirectory>${project.build.outputDirectory}</outputDirectory>-->
-							<!--<excludes>**/*.class</excludes>-->
-							<!--<includes>**/businessobject/**/*.xml,**/document/datadictionary/**/*.xml,**/OJB-repository.xml,**/OJB.properties</includes>-->
-							<!--</artifactItem>-->
-							<!--</artifactItems>-->
-							<!--</configuration>-->
-							<!--</execution>-->
-
 							<execution>
 								<id>unpack-config</id>
 								<phase>generate-resources</phase>
@@ -282,7 +224,6 @@
 											<artifactId>kmm-config</artifactId>
 											<overWrite>false</overWrite>
 											<outputDirectory>${project.build.directory}/kuali/kmm</outputDirectory>
-											<!--<includes>**/*</includes>-->
 										</artifactItem>
 									</artifactItems>
 								</configuration>
@@ -291,6 +232,13 @@
 					</plugin>
 				</plugins>
 			</build>
+		</profile>
+
+		<profile>
+			<id>release</id>
+			<properties>
+				<build.environment.setting>prd</build.environment.setting>
+			</properties>
 		</profile>
 	</profiles>
 
