KFSNWU-43 Upgrade KMM to Rice 2.0 * Update build time filters

--- a/config/src/main/filters/dev.properties
+++ b/config/src/main/filters/dev.properties
@@ -1,6 +1,6 @@
 log4j.dir.setting=target/kuali/kfs/logs
-kfs.server.domain.setting=localhost
+kmm.server.domain.setting=localhost
 rice.server.domain.setting=localhost
 rice.server.context.setting=/kmm
 kfs.server.domain.setting=localhost
-kfs.server.port=8081
+kfs.server.port.setting=8081
