--- a/config/src/main/filters/prd.properties
+++ b/config/src/main/filters/prd.properties
@@ -1,6 +1,6 @@
 log4j.dir.setting=[Log4j logs dir eg. /var/opt/kuali/kfs/logs]
-kfs.server.domain.setting=[Fully quallified domain name of local server]
+kmm.server.domain.setting=[Fully quallified domain name of local server]
 rice.server.domain.setting=[Fully quallified domain name of rice server]
 rice.server.context.setting=[Rice server web root context eg. /kr]
 kfs.server.domain.setting=localhost
-kfs.server.port=8080
+kfs.server.port.setting=8080
